--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -50,4 +50,5 @@ jobs:
       run: python manage.py migrate
 
     - name: Run tests
-      run: python manage.py test
+      run: python manage.py test --verbosity=2
+
